--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "There's no description partner",
   "main": "index.js",
   "scripts": {
-    "start": "node src/Index.js"
+    "start": "node src/Index.js",
+    "dev": "nodemon src/Index.js"
   },
   "dependencies": {
-    "express": "4.18.2",
-    "express-session": "1.17.3",
-    "cors": "2.8.5",
-    "mongoose": "6.7.1"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "mongoose": "^6.7.1",
+    "nodemon": "^2.0.20"
   },
   "keywords": [],
   "author": "",
