--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongoose": "^6.7.1",
-    "nodemon": "^2.0.20"
+    "mongoose": "^6.7.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20",
+    "jsonwebtoken": "^8.5.1"
   },
   "keywords": [],
   "author": "",
